--- a/index.html
+++ b/index.html
@@ -310,7 +310,7 @@
   </div>
 
   <audio id="ambientMusic" loop>
-    <source src="https://cdn.pixabay.com/download/audio/2023/12/28/audio_6509f64860.mp3?filename=soft-romantic-piano-176378.mp3" type="audio/mpeg">
+    <source src="https://github.com/Hrishi2131/PRoject3110/raw/refs/heads/main/Om%20Shanti%20Om%20(Instrumental)%20-%20Om%20Shanti%20Om%20128%20Kbps.mp3" type="audio/mpeg">
   </audio>
 
   <div id="hearts-container"></div>
@@ -495,3 +495,4 @@
   </script>
 </body>
 </html>
+
