--- a/index.html
+++ b/index.html
@@ -309,9 +309,9 @@
     <div class="message-text" id="text-finale"></div>
   </div>
 
-  <audio id="ambientMusic" loop>
-    <source src="https://github.com/Hrishi2131/PRoject3110/raw/refs/heads/main/Om%20Shanti%20Om%20(Instrumental)%20-%20Om%20Shanti%20Om%20128%20Kbps.mp3" type="audio/mpeg">
-  </audio>
+ <audio id="ambientMusic" loop>
+    <source src="https://drive.google.com/uc?export=download&id=1hCxxlcm4HEKwwK1wl6e7xZxKgAYco3s6" type="audio/mpeg">
+</audio>
 
   <div id="hearts-container"></div>
 
@@ -495,5 +495,6 @@
   </script>
 </body>
 </html>
+
 
 
