--- a/index.html
+++ b/index.html
@@ -305,13 +305,14 @@
   </div>
   
   <div id="finale-screen" class="message-screen screen">
-    <h2>Happy Birthday, My Safe Place. 🫂</h2>
+    <h2>Happy Birthday, My Safe Place.. 🫂</h2>
     <div class="message-text" id="text-finale"></div>
   </div>
 
- <audio id="ambientMusic" loop>
-    <source src="https://drive.google.com/uc?export=download&id=1hCxxlcm4HEKwwK1wl6e7xZxKgAYco3s6" type="audio/mpeg">
-</audio>
+  <audio id="ambientMusic" loop>
+     <source src="https://ik.imagekit.io/Hrishikesh2131/Om%20Shanti%20Om%20(Instrumental)%20-%20Om%20Shanti%20Om%20128%20Kbps.mp3?updatedAt=1761649040080" type="audio/mpeg">
+
+  </audio>
 
   <div id="hearts-container"></div>
 
@@ -495,6 +496,3 @@
   </script>
 </body>
 </html>
-
-
-
