--- a/index.html
+++ b/index.html
@@ -326,7 +326,7 @@
       "gift1": "My favorite memory? It's every night I got to **cuddle** you—you sleeping like my small, cute **baby** girl. That peace, that safety... that feeling is the **Memory** I carry through this LDR. You make distance feel temporary. 🫂",
       "gift2": "My **Wish** is that you never feel the need to change for anyone, especially not your beautiful **chubbiness**. You are perfect, adorable, and delicious just the way you are. May all your opportunities under that **sky** come true! ✨",
       "gift3": "My **Promise** is simple: I will always be your **safe space**. Your **hug** will always be waiting. I promise to support your cooking adventures (and eat all the food!) and to always treat you like the precious little girl you are to me. I love you, baby. 💞",
-      "finale": "This is my **LDR hug**. I’m holding you tight now. Close your eyes, feel the warmth, and know that you are **safe** here. Happy Birthday to the most beautiful, kind, and chubby girl in my world. I love you always, my **Little Star**! 🎂💖"
+      "finale": "This is my *LDR hug*. I’m holding you tight now. Close your eyes, feel the warmth, and know that you are **safe** here. Happy Birthday to the most beautiful, kind, and chubby girl in my world. I love you always, my **Little Star**! 🎂💖"
     };
     // ----------------------------------------
 
@@ -496,3 +496,4 @@
   </script>
 </body>
 </html>
+
