--- a/index.html
+++ b/index.html
@@ -652,7 +652,7 @@
 		};
 		
 		const messages = {
-			"msg1": "My dearest Preeti,this small space is designed in Sky Blue, a tribute to your ambitious heart. This canvas is a tribute to you, the beautiful 'Blue Sky Thinker. It’s a reminder that the world is an open sky, waiting for the grand dreams you carry As you read, notice how the text seems to glow and shimmer, like distant stars ✨. This is your light, my Little Star. Every word you see is a promise that you shine like this, alwaysThis journey is a tapestry of our emotions and memories, woven together with music. The gentle melody you hear is the sound of my heart, a soft reminder that distance is temporary, but our connection is infinite.This journey is for you, my self-motivated, beautiful Lady💙",
+			"msg1": "Welcome, Pilyaaa, to a space crafted not with code, but with the boundless admiration I hold for you.This journey begins on a canvas bathed in Sky Blue 💙—your favorite color, and a tribute to you. Just as you are a 'Blue Sky Thinker,' this endless blue reminds you that the universe is wide open for your grand aspirations and the big goals you will conquer.As you read, notice how the text seems to glow and shimmer, like distant stars ✨. That's you, my Little Star. Every element here is designed to be a reminder: "You shine like this, always."Take a deep breath. The gentle, soft melody beneath these words is the sound of my heart, reminding you that distance is temporary, but our connection is infinite. Every step will unfold a cherished memory or an unbreakable promise, all set to the soundtrack of us.This space is dedicated to the girl who lives her 'Dancing in Blueskies' ambitions. Let's make this day unforgettable..This journey is for you, my self-motivated, beautiful Lady💙",
 			"msg2": "You are the *sweetest* girl, my little **baby**.\nYour infectious, **joyful laugh** at your own lame jokes is the music I love most. Your smile, like when you wear a **saree** or **kurti**, makes my heart ache in the best way. For me, you are pure, simple, and the most beautiful thing in the world. **Never change.** 🎶",
 			"msg3": "This song is the feeling of our first walk together—shy, hopeful, and the quiet beginning of everything. Close your eyes and remember that moment. **This is for us.**",
 			"msg4": "That first melody was just a warm-up. This second one is a dedication to **your future**. To every success, every goal you crush, and every opportunity under the sky that belongs to you. **I'm so proud of you.**",
@@ -1018,3 +1018,4 @@
 	</script>
 </body>
 </html>
+
