--- a/index.html
+++ b/index.html
@@ -519,13 +519,13 @@
 	</div>
 
 	<div id="intro-msg-3" class="message-screen">
-		<h2 id="intro-title-3">A Song for My Heart... 💖</h2>
+		<h2 id="intro-title-3">Celebrating Her Beautiful Charm... 💖</h2>
 		<div class="message-text" id="intro-text-3"></div>
 		<button class="next-btn" onclick="advanceStep()">Listen to Our First Song 🎧</button>
 	</div>
 	
 	<div id="song-player-1" class="message-screen">
-		<h2>Song Dedication 1: Our First Walk 🚶‍♀️</h2>
+		<h2>Song Dedication 1: My Expression Queen 🚶‍♀️</h2>
 		<div class="message-text">Press Play to hear the song chosen to capture the shy, hopeful feeling of our beginning.</div>
 		
 		<div class="sound-wave" id="wave-1">
@@ -647,15 +647,15 @@
 			// NOTE: You must update these music URLs to your chosen tracks for them to work!
 			ambientMusicUrl: "https://ik.imagekit.io/Hrishikesh2131/Om%20Shanti%20Om%20(Instrumental)%20-%20Om%20Shanti%20Om%20128%20Kbps.mp3?updatedAt=1761649040080",
 			dedicatedSong1Url: "https://ik.imagekit.io/Hrishikesh2131/Main%20Agar%20Kahoon%20-%20Om%20Shanti%20Om%20320%20Kbps.mp3?updatedAt=1761750399176",
-			dedicatedSong2Url: "https://www.dl.dropboxusercontent.com/scl/fi/2k789fqqw8o49g8j98z3d/instrumental_romantic.mp3?rlkey=q6321q5p2k87h6a49r30h290f&dl=0",
+			dedicatedSong2Url: "https://ik.imagekit.io/Hrishikesh2131/Ajab%20Si%20Om%20Shanti%20Om%20320%20Kbps.mp3?updatedAt=1761853770085",
 			minListenTimeSeconds: 5
 		};
 		
 		const messages = {
-			"msg1": "Welcome, Pilyaaa, to a space crafted not with code, but with the boundless admiration I hold for you.This journey begins on a canvas bathed in Sky Blue 💙—your favorite color, and a tribute to you. Just as you are a 'Blue Sky Thinker,' this endless blue reminds you that the universe is wide open for your grand aspirations and the big goals you will conquer.As you read, notice how the text seems to glow and shimmer, like distant stars ✨. That's you, my Little Star. Every element here is designed to be a reminder: "You shine like this, always."Take a deep breath. The gentle, soft melody beneath these words is the sound of my heart, reminding you that distance is temporary, but our connection is infinite. Every step will unfold a cherished memory or an unbreakable promise, all set to the soundtrack of us.This space is dedicated to the girl who lives her 'Dancing in Blueskies' ambitions. Let's make this day unforgettable..This journey is for you, my self-motivated, beautiful Lady💙",
-			"msg2": "You are the *sweetest* girl, my little **baby**.\nYour infectious, **joyful laugh** at your own lame jokes is the music I love most. Your smile, like when you wear a **saree** or **kurti**, makes my heart ache in the best way. For me, you are pure, simple, and the most beautiful thing in the world. **Never change.** 🎶",
-			"msg3": "This song is the feeling of our first walk together—shy, hopeful, and the quiet beginning of everything. Close your eyes and remember that moment. **This is for us.**",
-			"msg4": "That first melody was just a warm-up. This second one is a dedication to **your future**. To every success, every goal you crush, and every opportunity under the sky that belongs to you. **I'm so proud of you.**",
+			"msg1": "Welcome, Pilyaaa, to a space crafted not with code, but with the boundless admiration I hold for you.This journey begins on a canvas bathed in Sky Blue 💙—your favorite color, and a tribute to you. Just as you are a 'Blue Sky Thinker,' this endless blue reminds you that the universe is wide open for your grand aspirations and the big goals you will conquer.As you read, notice how the text seems to glow and shimmer, like distant stars✨.That's you, my Little Star. Every element here is designed to be a reminder You shine like this, always.Take a deep breath. The gentle, soft melody beneath these words is the sound of my heart, reminding you that distance is temporary, but our connection is infinite.Every step will unfold a cherished memory or an unbreakable promise, all set to the soundtrack of us.This journey is for you, my self-motivated, beautiful Lady.",
+			"msg2": "You are truly the sweetest girl, my little baby.I know, I know—you always complain that I save the best compliments, but I've been intentionally holding back for this special day. Why? Because you deserve a moment as beautiful as your heart.Your infectious, joyful laugh at your own perfectly lame jokes makes my entire day, every time. And your smile, especially when you wear a saree or kurti... well, that gives my heart butterflies 🦋! You look so incredibly cute and sweet in them, I swear I could just eat you up (in the nicest way!) and watch you all day.For me, you are pure, simple, the most beautiful thing in the world, and so very precious to me. I saved this moment because I'm dedicating a song only for you, right now. It's the perfect soundtrack for all those feelings I hold inside. Never change a single thing about yourself. 🎶",
+			"msg3": "My Dearest Sundari,Before the music starts, I have to give you your official, most accurate Discription of your Beauty. You know I can write a million poems about you(maan ki aavaj - mhanshil kay fektoy aaj paryant ek kavita nay keli an million mhane..), but sometimes, the simple, honest truth is the most beautiful.I know the world loves thin, but I love my girl just the way she is.$$\text{You aren’t “chubby.” You are **OG** (Original Goddess).}$$.** Your figure is the definition of Sundari—perfectly rounded,perfectly curvey ,perfectly soft, and perfectly made for my hugs(Man ki Baat -> Lai Gubugubu hays tu Khau ka...). The way you carry yourself is pure grace,But the best part? The best part is your own natural smell. It's not any perfume or anything you put on—it’s just you. That simple, unique scent of you is divine to me. It makes me feel instantly at ease and completely yours. You are pure, uncut, OG 'Khubsurti' (Beauty), from your peach figure to your divine natural scent(mann ki baat -> jawal yeto na kharch kay smell yeto tuzya body madun like a kasturi kadhi smell kela nahi pn jar asel tr same tuzya sarkha asel you are my Kasturi..)",
+			"msg4": "Hello ajun baaki aahe bakki aahe tarrif ajun madum Rani aata tere naina.. My Queen of Expressions,I could live a whole lifetime without hearing you speak a single word, and I'd still know exactly what's going on in that brilliant head of yours. Why? Because you talk the loudest with your eyes(Man ki Baat -> dole bag dole) When you’re happy, they sparkle like a thousand fireflies. When you’re upset, I see the whole drama of the universe unfolding in those two little windows. Seriously, you are my personal Expression Queen and Drama Queen, and I wouldn’t have it any other way.Those eyes tell me everything—your secret excitement, your tired day, and most importantly, they always hold that unwavering love for me. It’s my favorite language, the one you speak without making a sound. Aani aata SOng for my Beautiful babys Eyes",
 			"transition": "Every time you open one of these, remember that just as you feel safe in my **hug**, I feel whole because of your kind, chubby presence. These gifts are not just words, but a piece of my heart traveling across the distance to you. **It's time for the cuddle...**",
 			"gift1": "My favorite memory? It's every night I got to **cuddle** you—you sleeping like my small, cute **baby** girl. That peace, that safety... that feeling is the **Memory** I carry through this LDR. You make distance feel temporary. 🫂",
 			"gift2": "My **Wish** is that you never feel the need to change for anyone, especially not your beautiful **chubbiness**. You are perfect, adorable, and delicious just the way you are. May all your opportunities under that **sky** come true! ✨",
@@ -1018,4 +1018,3 @@
 	</script>
 </body>
 </html>
-
