--- a/index.html
+++ b/index.html
@@ -584,7 +584,7 @@
 	</div>
 	
 	<div id="gift-screen" class="message-screen">
-		<div id="star-field"></div> <h1 class="gift-title">Choose Your Treasure...</h1>
+		<div id="star-field"></div> <h1 class="gift-title">Choose Your Gifts...🎁</h1>
 		
 		<div class="gift-grid">
 			
@@ -1040,3 +1040,4 @@
 	</script>
 </body>
 </html>
+
