--- a/index.html
+++ b/index.html
@@ -663,7 +663,7 @@
 			dedicatedVolume: 0.8,
 			// NOTE: You must update these music URLs to your chosen tracks for them to work!
 			ambientMusicUrl: "https://ik.imagekit.io/Hrishikesh2131/Untitled%20video%20-%20Made%20with%20Clipchamp.m4a?updatedAt=1761923211136",
-			dedicatedSong1Url: "https://ik.imagekit.io/Hrishikesh2131/Taar%20Laagli%20_%20Rohit%20Raut%20_%20New%20Song%20_%20Pawan%20Singh%20_%20IPOPSTAR%20_%20IPOPSTAR%20FULL%20PERFORMANCES%20_ipopstar%20(1).m4a?updatedAt=1761894497631",
+			dedicatedSong1Url: "https://ik.imagekit.io/Hrishikesh2131/Main%20Agar%20Kahoon%20-%20Om%20Shanti%20Om%20320%20Kbps.mp3?updatedAt=1762004772760",
 			dedicatedSong2Url: "https://ik.imagekit.io/Hrishikesh2131/Ajab%20Si%20Om%20Shanti%20Om%20320%20Kbps.mp3?updatedAt=1761853770085",
 			minListenTimeSeconds: 5
 		};
@@ -1040,4 +1040,5 @@
 	</script>
 </body>
 </html>
+
 
